Playing with webpack, es6

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,3 +1,8 @@
 <h1>Hello Rails</h1>
 
-<%= react_component("Timer") %>
+
+<div id="root">
+  foo
+</div>
+
+<%= javascript_pack_tag("application") %>
