Adds components that show shared state using redux

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -8,3 +8,9 @@
 <%= javascript_pack_tag("application") %>
 
 <%= react_component("Timer", message: "baby") %>
+
+<%= react_component("Counter") %>
+
+<div class="counter-display">
+  <%= react_component("CounterDisplay") %>
+<div>
