--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,17 @@
  *= require_tree .
  *= require_self
  */
+
+.counter {
+    padding: 20px;
+    border: 1px solid black;
+    background-color: orange;
+    margin-top: 20px;
+}
+
+.counter-display {
+    padding: 20px;
+    background-color: yellow;
+    border: 1px solid black;
+    margin-top: 20px;
+}
